--- a/1_Lect/index.html
+++ b/1_Lect/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лекция 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-
+    <script src="sum.js"></script>
     <script src="script.js"></script>
+
 </body>
+
 </html>
