--- a/1_Lect/index.html
+++ b/1_Lect/index.html
@@ -11,8 +11,11 @@
 <body>
 
     <script src="sum.js"></script>
-    <script src="spred.js"></script>
+    <script src="spred.js"></script>    
     <script src="script.js"></script>
+    
+    <script src="lexical.js"></script>
+    <script src="recursion.js"></script>
 
 </body>
 
