--- a/1_DZ/index.html
+++ b/1_DZ/index.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ДЗ 1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ДЗ 1</title>   
 </head>
 
 <body>
-
+    <div class="product">
+        
+        <div class="product_content">
+            <h3 class="product_name"></h3>
+            <p class="product_text">
+                <p class="sub_text"></p>
+            </p>
+        </div>
+        <img src="#" alt="photo" class="product_img">
+    </div>
    
     <script src="script.js"></script>
 
