--- a/1_Lect/index.html
+++ b/1_Lect/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <div class="product">
+        <img src="photo.img" alt="photo" class="product_img">
+        <div class="product_content">
+            <h3 class="product_name"></h3>
+            <p class="product_text"></p>
+        </div>
+    </div>
 
     <script src="sum.js"></script>
     <script src="spred.js"></script>    
