--- a/3_Lect/index.html
+++ b/3_Lect/index.html
@@ -5,18 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лекция 3</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+   </head>
 
 <body>
-   
-  
-    <script src="script.js"></script>
-    <!-- <script src="script1.js"></script> -->
-    <!-- <script src="script2.js"></script> -->
-    
- 
 
+
+    <!-- <script src="script.js"></script> -->
+    <script src="script1.js"></script>
 </body>
 
 </html>
