--- a/4_Sem/index.html
+++ b/4_Sem/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>семинар 4</title>   
+    <title>семинар 4</title>
 </head>
 
 <body>
-   
-    
+    <ul class="users">
+        <li>Пользователь</li>
+    </ul>
+
     <script src="script.js"></script>
 
 </body>
